Mobile Statistics Cards layout bug fix

--- a/src/components/Card/index.module.scss
+++ b/src/components/Card/index.module.scss
@@ -12,6 +12,10 @@
     height: auto;
     border-radius: 7px;
 
+    .iconAndText, p {
+        flex: 1;
+    }
+
     .iconAndText {
         display: flex;
         flex-direction: column;
